k8s/services/api-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
spec:
  selector:
    app: api-gateway
  ports:
  - name: "80"
    port: 80
    targetPort: 80
    protocol: TCP
  - name: "443"
    port: 443
    targetPort: 443
    protocol: TCP
