k8s/services/ingredient-predict-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingredient-predict-api
spec:
  selector:
    app: ingredient-predict-api
  ports:
  - name: "80"
    port: 80
    targetPort: 80
    protocol: TCP
