k8s/services/mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    app: mongo
spec:
  type: LoadBalancer
  selector:
    app: mongo
  ports:
  - name: "27017"
    port: 27017
    targetPort: 27017
    nodePort: 32017
    protocol: TCP
