k8s/services/notification-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-api
spec:
  selector:
    app: notification-api
  ports:
  - name: "80"
    port: 80
    targetPort: 80
    protocol: TCP
  - name: "443"
    port: 443
    targetPort: 443
    protocol: TCP
