k8s/services/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: redis
  ports:
  - name: "6379"
    port: 6379
    targetPort: 6379
