k8s/services/signalr.yaml
apiVersion: v1
kind: Service
metadata:
  name: signalr
spec:
  selector:
    app: signalr
  ports:
  - name: "80"
    port: 80
    targetPort: 80
    protocol: TCP
  - name: "443"
    port: 443
    targetPort: 443
    protocol: TCP
