k8s/services/sms-worker.yaml
apiVersion: v1
kind: Service
metadata:
  name: sms-worker
spec:
  selector:
    app: sms-worker
  ports:
  - name: "80"
    port: 80
    targetPort: 80
    protocol: TCP
